# deutsche-bahn-data

./: .gitignore  AGENTS.md  LICENSE  README.md  alternative_station_name_to_station_name.json  create_monthly_data_release.py  data.csv  db.ipynb  eva_list.txt  eva_name_list.txt  fetch_data.py  fetch_evas.py  get_additional_evas_of_trainstations.py  index.html  pyproject.toml  requirements.txt  requirements_fetch_data.txt  save_eva_list.py  save_eva_name_list.py  test.ipynb  update_data_csv.py  update_eva_list.py
.github/workflows/: data_update.yml  fetch_and_upload_data.yml  monthly_data_release.yml  update_statistics.yml
config/: eva_to_station_name.json
data/2024-05-09/: 08000001_fchg_10.xml  08000001_fchg_12.xml  08000001_fchg_15.xml  08000001_fchg_18.xml  08000001_fchg_21.xml  08000001_plan_10.xml  08000001_plan_11.xml  08000001_plan_12.xml  08000001_plan_13.xml  08000001_plan_14.xml  08000001_plan_15.xml  08000001_plan_16.xml  08000001_plan_17.xml  08000001_plan_18.xml  08000001_plan_19.xml  08000001_plan_20.xml  08000001_plan_21.xml  08000001_plan_22.xml  08000001_plan_23.xml  (+2033 more)
monthly_data_releases/: current_eva_list.csv
notebooks/: allgemein.ipynb  uebersicht.ipynb  verspaetung_pro_bahnhof.ipynb  verspaetungsverlauf.ipynb  zeitraum.ipynb  zuggattung.ipynb  zuggattungen_pro_bahnhof.ipynb  zugverbindung.ipynb
questions/: index.html  style.css
scripts/: create_monthly_data_release.py  db_data_fetcher.py  fetch_eva_plan_and_change.py  notebook_to_html.py  process_month.sh  update_eva_to_station_name_json.py  upload_data_to_huggingface.sh
stats/: allgemein.html  interactive.html  interaktive_abfragen.html  uebersicht.html  verspaetung_pro_bahnhof.html  verspaetungsverlauf.html  zeitraum.html  zuggattung.html  zuggattungen_pro_bahnhof.html  zugverbindung.html  übersicht.html
test_scripts/: test_create_monthly_data_release.py
(+1929899 files in other folders)
