[project]
name = "deutsche-bahn-data"
description = "Data about the german train company Deutsche Bahn"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = [
    "F",        # Pyflakes
    "UP",       # pyupgrade
    "B018",     # Found useless expression.
    "I",        # isort
    "RUF",      # ruff
]
ignore = [
  "E501", # line too long - will be fixed in format
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
